--- a/Pipfile
+++ b/Pipfile
@@ -11,3 +11,6 @@ django = "*"
 [requires]
 python_version = "3.13"
 python_full_version = "3.13.2"
+
+[scripts]
+start = "python manage.py runserver"
